--- a/app/src/main/res/layout/activity_double_click_game.xml
+++ b/app/src/main/res/layout/activity_double_click_game.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DoubleClickGame">
+    tools:context=".ReflexGame">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/resetButton1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp"
+        android:text="RESET" />
+
+    <Button
+        android:id="@+id/mainButton1"
+        android:layout_width="match_parent"
+        android:layout_height="431dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:text="Double Tap"
+        android:textColor="#ffffff"
+        android:textSize="64dp"
+        android:background="#ff0000" />
+</RelativeLayout>
