--- a/app/src/main/res/layout/activity_speed_game.xml
+++ b/app/src/main/res/layout/activity_speed_game.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="21dp"
         android:text="0"
         android:textAlignment="center"
-        android:textSize="29dp" />
+        android:textSize="29dp"
+        android:layout_alignParentLeft="true" />
 
     <TextView
         android:id="@+id/timerTv"
@@ -28,7 +29,9 @@
         android:layout_marginTop="74dp"
         android:text="Pozostały czas: 5.00 s"
         android:textAlignment="center"
-        android:textSize="29dp" />
+        android:textSize="29dp"
+        android:layout_marginLeft="0dp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/btn"
@@ -48,6 +51,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="120dp"
         android:layout_marginBottom="19dp"
-        android:text="Reset" />
+        android:text="Reset"
+        android:layout_alignRight="@+id/btn"
+        android:layout_marginRight="120dp" />
 
 </RelativeLayout>
